<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.eric</groupId>
  <artifactId>GobangGame</artifactId>
  <version>1.1.2</version>
  <name>GoBangGame</name>
  <description>Chinese game rewritten in java</description>
  <build>
    <sourceDirectory>src/main/java</sourceDirectory>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <release>21</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.6.1</version> <!-- Use the latest version -->
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <!-- Configuration for executable JAR -->
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                <mainClass>com.eric.GobangGame.GobangGame</mainClass>
                </transformer>
              </transformers>
              <!-- Other configurations like relocations go here -->
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.akathist.maven.plugins.launch4j</groupId>
        <artifactId>launch4j-maven-plugin</artifactId>
        <version>2.6.0</version>
        <configuration>
          <outfile>target/GobangGame.exe</outfile>
          <jar>${project.build.directory}/${project.build.finalName}.jar</jar>
          <dontWrapJar>false</dontWrapJar>
          <headerType>gui</headerType>
          <jre>
            <minVersion>21</minVersion>
          </jre>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>launch4j</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>de.perdian.maven.plugins</groupId>
        <artifactId>macosappbundler-maven-plugin</artifactId>
        <version>1.21.1</version>
        <configuration>
          <plist>
            <JVMMainClassName>com.eric.GobangGame.GobangGame</JVMMainClassName>
          </plist>
          <jdk>
            <include>true</include>
          </jdk>
          <dmg>
            <generate>true</generate>
          </dmg>
        </configuration>
        <executions>
          <execution>
          <phase>package</phase>
          <goals>
            <goal>bundle</goal>
          </goals>
        </execution>
      </executions>
    </plugin>
    </plugins>
  </build>
</project>